共用- 完成選項API
